--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		<audio controls id="emission">
 			<source src="https://dascritch.net/vrac/Emissions/CPU/0085-CPU%2817-05-18%29.ogg" type="audio/ogg">
 			<source src="https://dascritch.net/vrac/Emissions/CPU/podcast/0085-CPU%2817-05-18%29.mp3" type="audio/mpeg">
+			<track kind="chapters" src="chapters-ex0085.vtt" default>
 		</audio>
 	</cpu-audio>
 
