--- a/cpu-audio.html
+++ b/cpu-audio.html
@@ -351,7 +351,7 @@ a {
 	flex-direction: column;	
 }
 .cue {
-	border-bottom : 1px solid black;
+	border-top : 1px solid black;
 }
 .cue.active-cue {
 	color : yellow;
