--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 <h3 id="hashlinks">Link moments in audio into html pages</h3>
 
 <div>
+	<p>You can point to a moment of any audio of this page via a <code>&lt;a href&gt;</code> tag, even from outside.</p>
+
 	<cpu-audio 
 		title="Ex0085 Le Mystère Enigma"
 		poster="https://cpu.dascritch.net/public/Images/Emissions/.1805-Ex0085-Enigma_m.jpg"
