--- a/cpu-audio.html
+++ b/cpu-audio.html
@@ -414,7 +414,7 @@ a {
 
 </style>
 
-<div class="cpu-audio">
+<div class="cpu-audio" tabindex="0">
 	<img class="poster nosmall" src="" alt="" />
 	<div class="pageerror">
 	</div>
