--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
 </h1>
 
 <div>
-	<p>See <a href="https://github.com/dascritch/cpu-audio">README.md on this project's github</a></p>
+	<p><a href="index.html">This is a standard link to the page</a>, a sound will start if you inadvertly quited the page.</p>
+	<p><a href="index.html#emission&t=20m45s">This link starts the below player at 20:45</a></p>
 
+	<p>See <a href="https://github.com/dascritch/cpu-audio">README.md on this project's github</a></p>
 </div>
 
 
@@ -215,7 +217,7 @@
 
 <h3 id="fallbacks">Fallbacks</h3>
 <div>
-	Browsers that don't support enough in webcomponents must display correction the &lt;audio controls&gt; tag, as follow : 
+	Browsers that don't support enough in webcomponents must display the &lt;audio controls&gt; tag as follow : 
 </div>
 
 <pre>
