Add a CSS indicator about webcomponents status

--- a/cpu-audio.html
+++ b/cpu-audio.html
@@ -1475,11 +1475,12 @@ trigger.hashOrder({ at_start : true });
 
 if (!is_decent_browser_for_webcomponents()) {
 	console.error(`<${CpuAudioTagName}> WebComponent may NOT behave correctly. Only timecode hash links are activated.\nSee https://github.com/dascritch/cpu-audio/blob/master/index.html for details`);
-
 	querySelector_apply('audio[controls]', CPU_Audio.recall_audiotag);
+	window.document.body.classList.add('cpu-audio-without-webcomponents');
 } else {
 	window.customElements.define(CpuAudioTagName.toLowerCase(), CpuAudioElement);
 	window.customElements.define(CpuControllerTagName.toLowerCase(), CpuControllerElement);	
+	window.document.body.classList.add('cpu-audio-with-webcomponents');
 }
 })();
 </script>
