--- a/tests.html
+++ b/tests.html
@@ -23,7 +23,7 @@
 	</cpu-audio>
 
 	<p>
-		Manual test : <a href="#track@5m">named jump at 5mn</a>, <a href="#@15m">unnamed jump at 15mn</a>
+		Manual test : <a href="#track&t=5m">named jump at 5mn</a>, <a href="#&t=15m">unnamed jump at 15mn</a>
 	</p>
 
 	<div id="qunit"></div>
